--- a/Labs/Week07_Correlation_Lab.Rmd
+++ b/Labs/Week07_Correlation_Lab.Rmd
@@ -4,7 +4,7 @@ output:
   learnr::tutorial:
     progressive: true
     allow_skip: true
-    css: css/style.css
+    css: https://mtruelovehill.github.io/PRM/Labs/css/style.css
 runtime: shiny_prerendered
 ---
 
@@ -41,14 +41,11 @@ At the end of this lab, you will be able to:
 
 You'll be working with data adapted from [this study](https://www.tandfonline.com/doi/full/10.1080/1612197X.2017.1367951#d1e287). The researchers investigated adolescent athletes who played team sports. One area the study investigated was whether self-enhancement values (e.g., valuing power and achievement) were associated with antisocial behaviour towards members of the opposing team. You'll be investigating this association directly; you'll also produce plots using other related variables in the dataset.
 
-## Interpreting Correlations
-
-MONICA - create an interactive plot that allows them to visualise different types of correlations.
 
 ## Experiment Overview
 
 <br>
-In this experiment, you recruited a sample of adolescents who participated in team sports. Participants have an average score for each of 4 measures associated with desire for power and achievement. These scores, when totaled together, will provide a measure that reflects a participant's self-enhancement values. Higher scores on this composite metric reflect stronger self-enhancement values. Participants also have an Antisocial Behaviour score, which reflects their average score on the antisocial items from the Prosocial and Antisocial Behavior in Sport Scale. Higher scores on this scale reflect a larger number of endorsed antisocial behaviours.  
+In this experiment, you recruited a sample of adolescents who participated in team sports. Participants have an average score for each of 4 measures associated with desire for power and achievement from the. These scores, when totaled together, will provide a measure that reflects a participant's self-enhancement values. Higher scores on this composite metric reflect stronger self-enhancement values. Participants also have an Antisocial Behaviour score, which reflects their average score on the antisocial items from the Prosocial and Antisocial Behavior in Sport Scale. Higher scores on this scale reflect a larger number of endorsed antisocial behaviours.  
 
 You can download the dataset from the first experiment [here](https://mtruelovehill.github.io/PRM/Labs/Week7LabData.sav). It contains the following variables:
 
@@ -86,7 +83,7 @@ quiz(caption = '',
               answer('What is the association between age in years and weight in kg?', correct = T),
               answer('Is there a difference in ticket sales between movie theatres with recliners and those without?'),
               answer('Is there an association between season (Spring, Summer, Autumn, Winter) and the number of cyclists on the path through the Meadows?'),
-              answer('Are scores on the Beck Depression Inventory associated with weekly physical activity (in hours)', correct = T),
+              answer('Are scores on the Beck Depression Inventory associated with weekly physical activity (in hours)?', correct = T),
               answer('Can average sleep (hours per week) predict response time (in milliseconds)?'),
               random_answer_order = T,
               message = "Pearson's correlation is used to test for an association between two continuous variables. It doesn't test prediction or for group differences, and it should not be used with categorical data."))
@@ -407,12 +404,30 @@ knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_g
 
 ## Report & Interpret
 
-Task here.
+Now that you've completed the analyses, write a mini results section describing your findings. In this section, please:
+
++ Give a brief description of your sample as you would in a methods section. 
+
++ Report your results and a provide interpretation in APA style. 
 
 <div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
 
-Hint here.
+There are many ways you could write this up, but you'll need to at least include the following information:
+
++ alpha level
++ number of participants (n)
++ participant demographics (mean age, age $SD$, and age range of sample; gender distribution of sample)
++ correlated variables
++ descriptive data for each IV group (M and SD)
++ the type of test used (one-way or repeated measures?)
++ $r$
++ degrees of freedom (for a correlation, $df = n - 2$)
++ p-value
+
+The proper style of reporting the results from a correlation looks like this:
+
+$r$($df$) = [$r$ value], $p$ = [$p$-value], 95% CI = [lower band, upper band]. 
 
 </details>
 </div>
@@ -422,33 +437,30 @@ Hint here.
 <div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
 
-Solution here.
+In this study, we investigated whether adolescent athletes' self-enhancement values were associated with their antisocial behaviours towards members of the opposing team To do this, we collected data from a sample of 173 adolescents who participate in team sports. One participant was excluded due to an error in the data. Our final sample consisted of 172 adolescent athletes between the ages of 13-18 ($M$ = 15.92, $SD$ = 1.60; 88 Females, 84 Males). 
+
+We ran a Pearson's correlation to test the association between scores on a self-enhancement values scale and the average score on a scale that measured antisocial behaviour. We also used a Pearson correlation to test whether scores on each of the four questions on the self-enhancement scale were associated. $\alpha$ was set at .05 for all analyses.
+
+Participants scored an average of 12.38 on the self-enhancement scale ( $SD$ = 2.75; minimum = 6.28; maximum = 20.79) and had an average antisocial behaviour rating of 2.99 ( $SD$ = 0.87, minimum = 1, maximum = 5). Results from a Pearson's correlation indicated that there was a moderate, positive relationship between the two variables, r(170) = .31, p < .001, 95% CI = [.17, .44], indicating that participants who endorsed stronger self-enhancement values also demonstrated more antisocial behaviours towards members of the opposing team (see Figure 1). 
+
+<b> Figure 1 </b>
+
+<i> Self-Enhancement Values & Antisocial Behaviours Towards Opposing Team </i>
+
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotTextOptions.png')
+```
+
+
+Additionally, scores on each of the 4 questions on the self-enhancement scale were moderately positively correlated (see Table 1).
+
+
+```{r, echo = F, fig.align='center', out.width='75%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_corrMatrix.png')
+```
+
 
 </details>
 </div>
 </br>
-
-## Bonus Task: Simpson's Paradox
-
-Task here.
-
-<div class="container">
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
-
-Hint here.
-
-</details>
-</div>
-</br>
-
-
-<div class="container">
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
-
-Solution here.
-
-</details>
-</div>
-</br>
-
 
