--- a/docs/Labs/Week07_Correlation_Lab.Rmd
+++ b/docs/Labs/Week07_Correlation_Lab.Rmd
@@ -4,7 +4,7 @@ output:
   learnr::tutorial:
     progressive: true
     allow_skip: true
-    css: css/style.css
+    css: https://mtruelovehill.github.io/PRM/Labs/css/style.css
 runtime: shiny_prerendered
 ---
 
@@ -12,71 +12,52 @@ runtime: shiny_prerendered
 library(learnr)
 library(tidyverse)
 library(kableExtra)
-library(knitr)
-library(shiny)
-library(shinyjs)
-library(bslib)
 
 baseColor <- '#4CA384'
 accent1 <- '#9AD079'
 accent2 <- '#C4C6C7'
 accent3 <- '#19424C'
-#tutorial_options(exercise.timelimit = 60)
-```
-
-```{r, context = 'server'}
-output$distPlot <- renderPlot({
-  set.seed(806)
-      dat <- data.frame(X=rnorm(300, mean = input$mean, sd = input$sd))
-      ggplot(data.frame(X = c(-30, 30)), aes(x = X)) +
-        geom_histogram(data=dat, aes(x=X, y = after_stat(density)), fill = '#4CA384', color = '#19424C',
-                       binwidth = 2) +
-        stat_function(fun=dnorm, geom = "line", args = list(mean = input$mean, sd = input$sd),
-                      linewidth = 1, color = '#19424C') +
-        scale_x_continuous(breaks = seq(-30, 30, 10), limits=c(-30, 30)) +
-        scale_y_continuous(limits=c(0, .4)) +
-        theme(axis.title.x = element_text(size = 16, face = 'bold'),
-              axis.text.x = element_text(size = 16),
-              axis.line.y = element_blank(),
-              axis.text.y = element_blank(),
-              axis.ticks = element_blank(),
-              axis.title.y = element_blank())
-    })
-```
-
-## Intro to Today's Lab
-
-MONICA - MAKE STUDENTS CREATE A SUMMARY METRIC FROM AN ASSESSMENT USING THE CALCULATE FUNCTION; THIS NEW VALUE WILL THEN BE USED AS PART OF THE CORRELATION.
-
-Intro Goes Here   
-
-```{r, echo = F}
-# dat <- read.csv('Week1LabData.csv')
-# datInfo <- data.frame(VariableName=colnames(dat), 
-#                       Description=c('Participant ID', 'Age in years', 'Time of class in which assessment was given', 'Levels: 1=Male,
-#                                     2=Females, 3=Nonbinary', 'Assessment Version A Scores', 'Assessment Version B Scores', 'Assessment 
-#                                     Version C Scores', 'Assessment Version D Scores'))
-# 
-# datInfo %>%
-#   kbl(col.names=c('Variable Name', 'Description')) %>%
-#   kable_styling(full_width = F) %>%
-#   row_spec(0, bold = T, color=baseColor, font_size = 18, align='l') %>%
-#   column_spec(1, bold = T, width = '4.5cm')
 ```
 
 ## Intro to Today's Lab
 
 During today's lab, you'll apply the concepts discussed during this week's lecture. Each lab consists of a range of tasks, with corresponding questions you can answer. Please note that the questions are not required and not marked, although they do provide a helpful source of formative feedback that will help you gauge your understanding. 
 
-LAB INTRO HERE
+### Learning Objectives
+At the end of this lab, you will be able to:
 
-This dataset contains the following variables:
+1. Identify hypotheses which may be tested using correlations
+2. Use SPSS to compute a composite score
+3. Use SPSS to run a correlation
+3. Properly interpret and report a correlation
+4. Use the ggplot GUI to produce scatterplots, boxplots, and dot and error-bar plots
 
-UPDATE THIS TABLE:
+
+### This Week's Study
+
+You'll be working with data adapted from [this study](https://www.tandfonline.com/doi/full/10.1080/1612197X.2017.1367951#d1e287). The researchers investigated adolescent athletes who played team sports. One area the study investigated was whether self-enhancement values (e.g., valuing power and achievement) were associated with antisocial behaviour towards members of the opposing team. You'll be investigating this association directly; you'll also produce plots using other related variables in the dataset.
+
+
+## Experiment Overview
+
+<br>
+In this experiment, you recruited a sample of adolescents who participated in team sports. Participants have an average score for each of 4 measures associated with desire for power and achievement from the. These scores, when totaled together, will provide a measure that reflects a participant's self-enhancement values. Higher scores on this composite metric reflect stronger self-enhancement values. Participants also have an Antisocial Behaviour score, which reflects their average score on the antisocial items from the Prosocial and Antisocial Behavior in Sport Scale. Higher scores on this scale reflect a larger number of endorsed antisocial behaviours.  
+
+You can download the dataset from the first experiment [here](https://mtruelovehill.github.io/PRM/Labs/Week7LabData.sav). It contains the following variables:
+
 ```{r, echo = F}
-dat <- read.csv('https://mtruelovehill.github.io/PRM/Labs/Week6LabData.csv')
-datInfo <- data.frame(VariableName=colnames(dat), 
-                      Description=c('Study Group', 'Age in years', 'Sex', 'pre-intervention CAPS score', 'post-intervention CAPS score'))
+dat <- read.csv('https://mtruelovehill.github.io/PRM/Labs/Week7LabData.csv')
+datInfo <- data.frame(VariableName = colnames(dat),
+                      Description=c('Participant ID',
+                                    'Age in years',
+                                    'Levels: F = Female; M = Male',
+                                    'Self-Enhancment Score 1; values may range between 0 - 6',
+                                    'Self-Enhancment Score 2; values may range between 0 - 6',
+                                    'Self-Enhancment Score 3; values may range between 0 - 6',
+                                    'Self-Enhancment Score 4; values may range between 0 - 6',
+                                    'Average Antisocial Behaviour Score; values may range from 1-5',
+                                    'Self-Enhancement values as categories; Levels: High; Low',
+                                    'Self-reported feelings of parental pressure; Levels: High; Low'))
 
 datInfo %>%
   kbl(col.names=c('Variable Name', 'Description')) %>%
@@ -85,310 +66,397 @@ datInfo %>%
   column_spec(1, bold = T, width = '4.5cm')
 ```
 
-
-
-
-### Learning Objectives
-At the end of this lab, you will be able to:
-
-1.  
-
-
-## State your Hypotheses
-
-Task 1 Info Here
-
-* Identify IV(s) and DV(s)
-* State Hypotheses (Mixed Methods ANOVA)
+You'll be investigating the association between student athletes' endorsement of self-enhancement values and reports of their antisocial behaviour towards members of the opposing team.
 
 ```{r q1, echo = FALSE}
-# quiz(caption = 'Test Your Understanding',
-#      question('Which of the following hypotheses can be tested using a mixed methods ANOVA? Please select all that apply.',
-#               answer('Hypothesis1', correct = T),
-#               answer('Hypothesis2'),
-#               answer('Hypothesis3'),
-#               answer('Hypothesis4'),
-#               answer('Hypothesis5'),
-#               random_answer_order = T,
-#               message = 'Feedback Here'),
-#      question('You have developed an intervention and want to test its effectiveness. You recruit a sample of participants and measure their symptom severity both before and after the intervention. You measure patient symptom severity on a continuous scale. You would like to compare the two symptom severity scores. Which of the following tests is most appropriate?',
-#               answer('One-sample t-test'),
-#               answer('Independent samples t-test'),
-#               answer('Paired-samples t-test', correct = T),
-#               message = "Because you have a pre- and post-intervention measurement from each participant, the two scores are considered to be paired. An individual's score on the post-test will not be independent of their scores on the pre-test. A paired-samples t-test will account for this lack of independence between the two groups of scores."))
-
+quiz(caption = '',
+     question("Which test is most appropriate to address your research question, given the study design?",
+              answer("t-test"),
+              answer("Factorial ANOVA"),
+              answer("Correlation", correct = T),
+              message = "Here, you're looking at the association between two continuous variables. Both a t-test and a Factorial ANOVA require a categorical dependent variable, so a correlation is the most appropriate of these three."),
+     question("Which of the following questions are best addressed using Pearson's correlation? Please select all that apply.",
+              answer('What is the association between age in years and weight in kg?', correct = T),
+              answer('Is there a difference in ticket sales between movie theatres with recliners and those without?'),
+              answer('Is there an association between season (Spring, Summer, Autumn, Winter) and the number of cyclists on the path through the Meadows?'),
+              answer('Are scores on the Beck Depression Inventory associated with weekly physical activity (in hours)?', correct = T),
+              answer('Can average sleep (hours per week) predict response time (in milliseconds)?'),
+              random_answer_order = T,
+              message = "Pearson's correlation is used to test for an association between two continuous variables. It doesn't test prediction or for group differences, and it should not be used with categorical data."))
 ```
 
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
+### Your Tasks
++ [ ] $\ $ Specify the variables to be correlated.
++ [ ] $\ $ State your research question for this experiment.
++ [ ] $\ $ State your hypotheses for this experiment, both using words and statistically.
 
-Hint Goes Here
+<br>
+
+<div class="container">
+<details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for a hint </span></summary>
+
+
+In your research question, you should mention each of the variables you're investigating and the population being studied.
+
+To state hypotheses statistically, you should structure them in the framework of the statistical values being tested.
 
 </details>
-
+</div>
 </br>
 
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
+<div class="container">
+<details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for the solution </span></summary>
+<br>
+<b>Possible Research Questions:</b>
 
-Solution Goes Here
+Is there a significant association between values of self-enhancement and antisocial behaviour against opposing team members in student athletes?
+
+<br>
+
+<b>Variable 1:</b> Self-Enhancement 
+
+<b>Variable 2:</b> Antisocial Behaviour
+
+<br>
+
+<b>Hypotheses:</b>
+
+<i> General: </i>
+
+$H_0:$ There is no association between endorsement of self-enhancement values and antisocial behaviour
+
+$H_1:$ There is an association between endorsement of self-enhancement values and antisocial behaviour
+
+
+<i> Statistical: </i>
+
+$H_0: r = 0$
+
+$H_1: r \neq 0$
 
 </details>
-
+</div>
 </br>
 
-## Run the Appropriate Power Analyses 
 
-Task Goes Here
-* Maybe an a priori & a sensitivity
+## Data Review
 
-```{r q2, echo = FALSE}
-# quiz(caption = 'Test Your Understanding',
-#      question("Which type of data is C?",
-#               answer("Categorical"),
-#               answer("Continuous", correct = T),
-#               random_answer_order = T),
-#      question("Which type of data is Gender?",
-#               answer("Continuous"),
-#               answer('Categorical', correct = T)),
-#      question("Which type of data is ClassTime?",
-#               answer("Continuous"),
-#               answer('Categorical', correct = T),
-#               message='Categorical data are nominal or ordinal data with no numeric relationship (although they may be represented
-#               numerically), while continuous data have a traditional numeric relationship; continuous data can technically take on an  
-#               infinite range of values if measurement was precise enough'),
-#      question('Which of the following "Measure" values used by SPSS reflects categorical data?',
-#               answer('Nominal', correct = T),
-#               answer('Ordinal', correct = T),
-#               answer('Scale'),
-#               message = 'Scale can be used for both types of continuous data (ratio and interval scales of measurement), but categorical
-#               variables are split into nominal and ordinal measures. Remember that nominal data reflects purely independent categories,
-#               but ordinal data has some sort of implied order (e.g. Likert Scale data, level of education).'))
+Before running any analyses, you should first check your data. In many cases, some kind of cleaning or data wrangling will be necessary. For instance, are there any missing values? Do you have any unexpected values or extreme outliers? Do you need to create a variable from the existing data (e.g., a summary metric for a cognitive task)? These things should be dealt with before conducting the analyses.
+
+Additionally, you'll need to compute descriptive data. You'll do this for both your main variables of interest and your sample's demographic data, as this must be included in the Sample portion of your Methods section. 
+
+### Your Tasks
+
++ [ ] $\ $ Open 'Week7LabData.sav'
+
++ [ ] $\ $ Check that all variables are set as the correct measurement type. 
+
++ [ ] $\ $ Check the descriptive statistics of your data
+
++ [ ] $\ $ Compute a composite score, `SelfEnhancement`, by summing the following columns: `SE1`, `SE2`, `SE3`, and `SE4`
+
+```{r cyr, echo = FALSE}
+quiz(caption = 'Check Your Results',
+     question_numeric("What is the mean score on SE1? Please round your answer to two decimal places.",
+                      answer(3.17, correct = T),
+                      message = "The mean SE1 score in your sample is 3.17."),
+     question_numeric('What is the maximum value for AntisocialBehaviour? Please round your answer to two decimal places.',
+                      answer(488.00, correct = T),
+                      message = "The maximum Antisocial Behaviour score is 488, which is well outside the expected limits of 1-5. As a score of 488 is not possible, it is an error. It will need to be deleted so that it is excluded from further analysis."))
 ```
 
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
+<div class="container">
+<details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for a hint </span></summary>
 
-Hint Here
+For continuous variables, the descriptive statistics you'll want to check are mean and standard deviation. It's also useful to check the minimum and maximum so you can easily identify values outside of your expected range. For categorical variables, you'll check the frequency of participants in each group. It may also be useful to check the mode.
+
+To compute the self-enhancement composite score, you'll need to navigate to *Transform > Compute Variable*
+
 
 </details>
-
+</div>
 </br>
 
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
+<div class="container">
+<details><summary><span style = "font-weight: bold; font-size: 16pt"> Click here for the solution </span></summary>
 
-Solution here.
+<span style = "font-weight: bold; font-size: 14pt"> Adjust Variable Measure Format </span>
 
-</details>
+To check that your variables are labeled as the correct scale of measurement, look at the **Measure** column under the *Variable View* tab.
 
-</br>
+* `ID` - Ordinal
 
+* `Age` - Scale
 
-## Calculate Descriptive Data 
+* `Gender` - Nominal
 
-Task Description Here
+* `SE1` - Scale
 
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
+* `SE2` - Scale
 
-Hint Here
+* `SE3` - Scale
 
-</details>
+* `AntisocialBehaviour` - Scale
 
-</br>
+* `SEcategory` - Nominal
 
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
+* `ParentalPressure` - Nominal
 
-Solution Here.
+In this instance, SPSS assigned the proper measures by default (with the exception of ID, which won't be used as part of any analysis, so you can ignore it if you'd like). No changes are required.
 
-</details>
+<br>
+<span style = "font-weight: bold; font-size: 14pt"> Check Descriptive Statistics </span>
 
-</br>
+**Categorical Variables:** Your categorical variables are `Gender`, `SEcategory`, and `ParentalPressure`. Click *Analyze>Descriptive Statistics>Frequencies*, then add these variables to the 'Variable(s)' box. Make sure 'Display frequency tables' is checked, then click 'OK'. You should see the following output:
 
-
-
-
-## Visualise Your Data 
-
-Task Here.
-
-```{r q4, echo = FALSE}
-# quiz(caption = 'Test Your Understanding',
-#      question("At least one of the groups is limited in size compared to the others",
-#               answer("True", correct = T),
-#               answer("False"),
-#               message = 'The nonbinary group is much smaller than the other two measured groups.'),
-#      question_numeric("How many total datapoints do you have for the gender variable?",
-#               answer(48, correct=T)),
-#      question_numeric("What percentage of participants are female?",
-#               answer(41.7, correct=T)),
-#      question_numeric('How many nonbinary participants are in your sample?',
-#               answer(2, correct=T)))
+```{r, echo = F, fig.align= 'center', out.width = '50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_freqTables.png')
 ```
 
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
 
-Hint Here
+**Continuous Variables:** Your continuous variables are `SE1`, `SE2`, `SE3`, `SE4` and `AntisocialBehaviour`. Click *Analyze>Descriptive Statistics>Frequencies*, then add these variables to the 'Variable(s)' box. Make sure 'Display frequency tables' is not ticked, then click 'Statistics'. Tick 'Mean', 'Std. Deviation', 'Minimum', and 'Maximum'. Click 'Continue', then 'OK'. You should see the following output:
 
-</details>
-</br>
-
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
-
-Solution Here
-
-</details>
-</br>
-
-## Check Assumptions
-
-Task Here
-
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
-
-Hint Here.
-
-</details>
-</br>
-
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
-
-Solution Here.
-
-</details>
-</br>
-
-## Run ANOVA
-
-Task Description.
-* Maybe also discuss degrees of freedom here
-
-```{r q6, echo = FALSE}
-# quiz(caption = 'Test Your Understanding',
-#      question("Which of the following central tendency measures could be used to describe age? Please select all that apply.",
-#               answer("Mean", correct = T),
-#               answer("Median", correct = T),
-#               answer('Mode', correct = T),
-#               message = 'All of the above could technically be used to describe the Age variable. However, it is most common to use the
-#               mean, as it includes information from each observation.'),
-#      question("Which of the following central tendency measures could be used to describe gender? Please select all that apply.",
-#               answer("Mean"),
-#               answer("Median"),
-#               answer('Mode', correct = T),
-#               message = 'As a categorical variable, there is no numeric relationship between values in the gender variable. Therefore, 
-#               the mode is the only measure of central tendency that is appropriate to describe this variable'),
-#      question_numeric("What is the average score on Assessment A?",
-#               answer(39.10, correct=T)),
-#      question_numeric("What is the most common age in this sample?",
-#               answer(19, correct=T)),
-#      question_numeric("What is the median score on Assessment D?",
-#               answer(81.87, correct=T))
-# )
+```{r, echo = F, fig.align= 'center', out.width = '40%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_descStats.png')
 ```
 
+Note that the maximum value for `AntisocialBehaviour` is 488, which is not a valid score. This is an error, so you'll need to remove it from your data so that it is not included in further analysis. To do this, find the value in your dataset under 'Data View' and delete it.
+
+<br>
+<span style = "font-weight: bold; font-size: 14pt"> Compute Composite Score </span>
+
+To compute the composite score by summing together the SE columns, navigate to *Transform > Compute Variable*. Label your new variable `SelfEnhancement` in the 'Target Variable' box. In the 'Numeric Expression', add each SE column (`SE1`, `SE2`, `SE3`, and `SE4`) with a $+$ sign between them:
+
+```{r, echo = F, fig.align= 'center', out.width = '60%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_composite.png')
+```
+
+Click 'OK'. A new column labeled `SelfEnhancement` should appear that contains the sum of the 4 SE columns.
+
+</details>
+</div>
+</br>
+
+## Run Correlations
+
+As you are testing for an association between two continuous variables, you'll use a correlation to provide statistical support for your hypotheses. 
+
+Recall that $r$ has the following interpretation standards:
+
+| Strength     | Magnitude of $r$ |
+|:------------:|:----------------:|
+| Negligible   | $<$ .1           |
+| Weak         | .1 - .3          |
+| Moderate     | .3 - .6          |
+| Strong       | $>$ .6           |
+
+
+### Your Tasks
+
++ [ ] $\ $ Run a correlation to test your hypotheses and interpret the results with $\alpha$ = .05.
+
++ [ ] $\ $ Produce a correlation matrix showing the correlations between each of the SE variables: `SE1`, `SE2`, `SE3`, and `SE4`
+
+
+```{r cyrCorr, echo = FALSE}
+quiz(caption = 'Check Your Results',
+     question_numeric("What is the Pearson correlation value for the association between AntisocialBehaviour and SelfEnhancement? Please round your answer to two decimal places.",
+              answer(.31, correct = T),
+              message = "Pearson's r for the association between AntisocialBehaviour and SelfEnhancement is .31."),
+     question("Which of the following pairs have the weakest association?",
+              answer("SE1 & SE2"),
+              answer("SE1 & SE3"),
+              answer('SE1 & SE4', correct = T),
+              message = "Pearson's r for the association between SE1 & SE4 is only .30. For the association between SE1 & SE3, it is .49, and for the association between SE1 & SE2, it is .54."))
+```
+
+<div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
+
+To run a correlation, you'll need to navigate to *Analyze > Correlate > Bivariate*
+
+</details>
+</div>
+</br>
+
+<div class="container">
+<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
+
+To correlate `SelfEnhancement` with `AntisocialBehaviour`, navigate to *Analyze > Correlate > Bivariate* and add both of these to the 'Variables' box. You can specify that you'd like to also compute the relevant confidence intervals by selecting 'Confidence interval' box and ticking the 'Estimate confidence intervals of the bivariate correlation parameter' box. Click 'Continue' and then 'OK'. You'll get the following output:
+
+```{r, echo = F, fig.align= 'center', out.width = '50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_correlationResults.png')
+```
+
+The top box provides a correlation matrix with the value of $r$ and the p-value, while the bottom box gives the confidence interval associated with the correlation. Here, you can see that $r$ = .3, which equates to a weak to moderate association between `SelfEnhancement` and `AntisocialBehaviour`. The $p$-value (< .001) is less than the $\alpha$ threshold of .05, so this association is significant. The 95% confidence interval indicates that we can be 95% confident that the true association ($r$) between these two variables falls between .17 and .44. 
+
+You can correlate the SE variables in the same way as above. This time, click 'Show only the lower diagonal'. This removes redundant information from the correlation matrix, which is how correlation matrices are typically presented:
+
+```{r, echo = F, fig.align= 'center', out.width = '50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_correlationMatrix.png')
+```
+
+Here, you can see that all variables are significantly associated with each other, which you would expect given that they are supposed to measure the same construct. 
+
+
+</details>
+</div>
+</br>
+
+## Using ggPlot GUI for visualisation
+
+Often, visualisations of your results allows outside reader's to more easily interpret your findings. Effective visualisations allow you to present your results more clearly and efficiently than describing them in text alone. As a psychology student, you will almost always need to follow APA-style when producing figures. SPSS does not always produce customisable, APA-style figures. Here, you'll learn how to use the [ggplot GUI website](https://shiny.gmw.rug.nl/ggplotgui/) to produce 3 common types of plots.
+
+### Your Tasks
+
++ [ ] $\ $ Create an APA-style scatterplot with `SelfEnhancement` on the x-axis and `AntisocialBehaviour` on the y-axis. Please include a regression line.
+
++ [ ] $\ $ Create an APA-style boxplot with `SEcategory` on the x-axis and `AntisocialBehaviour` on the y-axis.
+
++ [ ] $\ $ Create an APA-style dot-and-error plot with `SEcategory` on the x-axis, `AntisocialBehaviour` on the y-axis, and `ParentalPressure` as the Group variable.
+
+```{r cyrPlots, echo = FALSE}
+quiz(caption = 'Check Your Results',
+     question("Does your boxplot suggest the presence of any outliers in your data?",
+              answer('Yes', correct = T),
+              answer('No'),
+              message = "The dot just past the upper whisker of the box reflecting Low Self-Enhancement reflects an outlier."),
+     question("Does your dot-and-error plot suggest the presence of an interaction between SEcategory and ParentalPressure on AntisocialBehaviour?",
+              answer('Yes', correct = T),
+              answer('No'),
+              message = "The effect of Self-Enhancement on AntisocialBehaviour is different across levels of Parental Pressure, so it is likely that there is an interaction effect."))
+```
+
+<div class="container">
+<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
+
 Hint here.
+
 </details>
+</div>
 </br>
 
+<div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
 
-Solution here.
+Navigate [to the ggplot GUI webpage](https://shiny.gmw.rug.nl/ggplotgui/) by clicking the link. Upload the SPSS datafile into the ggplot GUI application by using Data Upload column on the left of the page. First, click the 'Browse' button to find the file on your device, selecting 'SPSS' under 'Type of File', then clicking 'Submit Datafile'.
 
-</details>
-</br>
-
-## Run Post-Hoc Analyses
-
-Task here.
-
-```{r q7, echo = FALSE}
-# quiz(caption = 'Test Your Understanding',
-#      question_numeric("What is the IQR for Assessment B?",
-#               answer(4, correct=T),
-#               message = "To get the IQR for a variable, you'll need to subtract the 25th percentile from the 75th percentile."),
-#      question_numeric("What is the maximum score on Assessment C?",
-#               answer(78, correct=T)),
-#      question_numeric("What is the standard deviation of scores on Assessment D? Please report your answer to two decimal places.",
-#               answer(2.15, correct=T))
-# )
+```{r, echo = F, fig.align= 'center', out.width = '50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotData.png')
 ```
 
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
+You'll see a sample of the data appear to the right. To generate a plot with these data, click the 'ggplot' option, here:
 
-Hint here.
-
-</details>
-</br>
-
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
-
-Solution here.
-
-</details>
-</br>
-
-## Calculate Effect Sizes
-
-Task here.
-
-```{r distPlot, echo = F}
-# 
-# fluidRow(column(4, 
-#   sliderInput("mean","Value of Mean:", min = -6, max = 6, value = 0, step = 2),
-#   sliderInput('sd', 'Value of SD:', min = 1, max = 5, value = 1, step = .25)),
-#   column(8, plotOutput('distPlot')))
-# 
-# tags$style(HTML(".js-irs-0 .irs-single, .js-irs-0 .irs-bar-edge, .js-irs-0 .irs-bar {background: #4CA384}"))
-# tags$style(HTML(".js-irs-1 .irs-single, .js-irs-1 .irs-bar-edge, .js-irs-1 .irs-bar {background: #4CA384}"))
-
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week6_ggplotTab.png')
 ```
 
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
+Here, you can create your plot using the options available in the columns on the left and right of the page. 
 
-Hint here.
+<span style = "font-weight: bold; font-size: 14pt"> Boxplot </span>
+In the left column, set the type of plot to 'Boxplot', the y-axis to `AntisocialBehaviour` and the x-axis to `SEcategory`. You can leave everything else as the default setting. To make sure the plot is APA style, navigate to the options on the right of the page, click Theme, and select 'classic' from the drop-down box. You should now have an APA-style boxplot that shows the difference in antisocial behaviour between self-enhancement value groups:
+
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotBoxplot.png')
+```
+
+<span style = "font-weight: bold; font-size: 14pt"> Scatterplot </span>
+In the left column, set the type of plot to 'Scatter', the y-axis to `AntisocialBehaviour` and the x-axis to `SEcategory`. Tick the 'Show regression line' box, and make sure the smoothing function is 'lm'.  To make sure the plot is APA style, navigate to the options on the right of the page, click Theme, and select 'classic' from the drop-down box. You should now have an APA-style scatterplot that shows the association between self-enhancement values and antisocial behaviour:
+
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotScatter.png')
+```
+
+You can change the axis labels to be more manuscript appropriate (e.g., add spaces between words) by using the 'Text' tab in the right column and ticking 'Change labels axes'.
+
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotTextOptions.png')
+```
+
+<span style = "font-weight: bold; font-size: 14pt"> Boxplot </span>
+In the left column, set the type of plot to 'Boxplot'. The y-axis can stay set at `AntisocialBehaviour`, but change the x-axis to `SEcategory`. You can leave everything else as the default setting. You should now have an APA-style boxplot that shows the difference in antisocial behaviour between self-enhancement value groups:
+
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotBoxplot.png')
+```
+
+
+<span style = "font-weight: bold; font-size: 14pt"> Dot & Error Plot </span>
+In the left column, set the type of plot to 'Dot + Error'. The y-axis can stay set at `AntisocialBehaviour` and the the x-axis at `SEcategory`, but add `ParentalPressure` as the Group variable. You can leave everything else as the default setting. 
+
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotDotError.png')
+```
+
+You can change the legend label by using the 'Legend' tab in the right column and ticking 'Change legend'.
+
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotLegendOptions.png')
+```
 
 </details>
-</br>
-
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
-
-Solution here.
-
-</details>
-</br>
-
-
-## Visualise the Analysis Results
-
-Task here.
-
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
-
-Hint here.
-
-</details>
-</br>
-
-<details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
-
-Solution here.
-
-</details>
+</div>
 </br>
 
 ## Report & Interpret
 
-Task here.
+Now that you've completed the analyses, write a mini results section describing your findings. In this section, please:
 
++ Give a brief description of your sample as you would in a methods section. 
 
++ Report your results and a provide interpretation in APA style. 
+
+<div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for a hint </span></summary>
 
-Hint here.
+There are many ways you could write this up, but you'll need to at least include the following information:
+
++ alpha level
++ number of participants (n)
++ participant demographics (mean age, age $SD$, and age range of sample; gender distribution of sample)
++ correlated variables
++ descriptive data for each IV group (M and SD)
++ the type of test used (one-way or repeated measures?)
++ $r$
++ degrees of freedom (for a correlation, $df = n - 2$)
++ p-value
+
+The proper style of reporting the results from a correlation looks like this:
+
+$r$($df$) = [$r$ value], $p$ = [$p$-value], 95% CI = [lower band, upper band]. 
 
 </details>
+</div>
 </br>
 
+
+<div class="container">
 <details><summary><span style = "font-weight: bold; font-size: 16pt"> + Click here for the solution </span></summary>
 
-Solution here.
+In this study, we investigated whether adolescent athletes' self-enhancement values were associated with their antisocial behaviours towards members of the opposing team To do this, we collected data from a sample of 173 adolescents who participate in team sports. One participant was excluded due to an error in the data. Our final sample consisted of 172 adolescent athletes between the ages of 13-18 ($M$ = 15.92, $SD$ = 1.60; 88 Females, 84 Males). 
+
+We ran a Pearson's correlation to test the association between scores on a self-enhancement values scale and the average score on a scale that measured antisocial behaviour. We also used a Pearson correlation to test whether scores on each of the four questions on the self-enhancement scale were associated. $\alpha$ was set at .05 for all analyses.
+
+Participants scored an average of 12.38 on the self-enhancement scale ( $SD$ = 2.75; minimum = 6.28; maximum = 20.79) and had an average antisocial behaviour rating of 2.99 ( $SD$ = 0.87, minimum = 1, maximum = 5). Results from a Pearson's correlation indicated that there was a moderate, positive relationship between the two variables, r(170) = .31, p < .001, 95% CI = [.17, .44], indicating that participants who endorsed stronger self-enhancement values also demonstrated more antisocial behaviours towards members of the opposing team (see Figure 1). 
+
+<b> Figure 1 </b>
+
+<i> Self-Enhancement Values & Antisocial Behaviours Towards Opposing Team </i>
+
+```{r, echo = F, fig.align='center', out.width='50%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_ggplotTextOptions.png')
+```
+
+
+Additionally, scores on each of the 4 questions on the self-enhancement scale were moderately positively correlated (see Table 1).
+
+
+```{r, echo = F, fig.align='center', out.width='75%'}
+knitr::include_graphics('https://mtruelovehill.github.io/PRM/Labs/images/week7_week7_scatterFig.pdf')
+```
+
 
 </details>
+</div>
 </br>
 
